--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   mqtt_client: ^9.8.0
+  loading_animation_widget: ^1.2.0+4
+  restart_app: ^1.1.2
+  internet_connection_checker: ^1.0.0+1
+  flutter_background_service: ^2.4.6
 
 dev_dependencies:
   flutter_test:
